# codm_star

./: .gitignore  LICENSE  README.md  meson.build
experiments/: Dockerfile  README.md  run_exps_with_docker.sh
experiments/archive/: run_all_exps.sh
experiments/archive/compute_results/: run_all_exps.sh  run_experiments.sh
experiments/archive/results/: README.md  gmon.out  run_algorithm.sh  run_experiments.sh
experiments/archive/results_swapping_conflicts/: generate_plot.py  gmon.out  make_plot_pictures.py  parse_log_abs.py  run_algorithm.sh  run_algorithms.sh
experiments/generation/: generate_exp.py  setup_gen_exp.sh
experiments/generation/data/: offices_range1_agents100_0.exp  offices_range1_agents100_1.exp  offices_range1_agents100_10.exp  offices_range1_agents100_11.exp  offices_range1_agents100_12.exp  offices_range1_agents100_13.exp  offices_range1_agents100_14.exp  offices_range1_agents100_15.exp  offices_range1_agents100_16.exp  offices_range1_agents100_17.exp  (+1510 more)
experiments/utils/: CAStar.hpp
include/: cmapf_types.hpp  graph.hpp  instance_loader.hpp  meta_agents_manager.hpp  shortest_paths.hpp
include/cca_star/: cca_star.hpp
include/codm_star/: codm_star.hpp  codm_types.hpp  collision_conflicts_manager.hpp  connectivity_conflicts_manager.hpp  subplanners_manager.hpp
src/: graph.cpp  instance_loader.cpp  main.cpp
src/cca_star/: cca_star.cpp
src/codm_star/: codm_star.cpp  subplanners_manager.cpp
subprojects/: rapidxml.wrap
subprojects/rapidxml/: meson.build
tests/: meson.build  test_graph.cpp  test_meta_agent.cpp  tests.cpp
(+3585 files in other folders)
